Include call to action on home.html

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -312,6 +312,24 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+
+<aside class="bg-orange bg-gradient rounded-3 p-4 p-sm-5 mt-5">
+  <div
+    class="d-flex align-items-center justify-content-between flex-column flex-xl-row text-center text-xl-start"
+  >
+    <div class="mb-4 mb-xl-0">
+      <div class="fs-3 fw-bold text-white">
+        New products and courses every year.
+      </div>
+      <div class="text-white">
+        Sign up to our <a class='fw-bolder text-decoration-underline' href="#">Memberships</a> for exclusive offers.
+      </div>
+    </div>
+      <div class="small text-white">
+        We care about privacy, and will never share your data.
+      </div>
+  </div>
+</aside>
     </div>
   </section>
 {% endblock %}
