--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -8,48 +8,46 @@
 
 {% block page_header %}
 <header class="py-5">
-  <!-- Navigation-->
-  <div class="container px-5">
-    <div class="row gx-5 align-items-center justify-content-center">
-      <div class="col-lg-8 col-xl-7 col-xxl-6">
-        <div class="my-5 text-center text-xl-start">
-          <h1 class="display-5 fw-bolder text-white mb-2">CI SWAG STORE</h1>
-          <p class="lead fw-normal text-white-50 mb-4">
-            CI Swag Store, where fashion meets knowledge. Our store not only
-            offers stylish branded gear but also provides short
-            instructional courses, enriching students with skills and
-            insights beyond the classroom.
-          </p>
-          <div
-            class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start"
-          >
-            <a
-              class="btn bg-orange btn-lg px-4 me-sm-3 text-white"
+    <!-- Navigation-->
+    <div class="container px-5">
+      <div class="row gx-5 align-items-center justify-content-center">
+        <div class="col-lg-8 col-xl-7 col-xxl-6">
+          <div class="my-5 text-center text-xl-start">
+            <h1 class="display-5 fw-bolder text-white mb-2">CI SWAG STORE</h1>
+            <p class="lead fw-normal text-white-50 mb-4">
+              CI Swag Store, where fashion meets knowledge. Our store not only
+              offers stylish branded gear but also provides short
+              instructional courses, enriching students with skills and
+              insights beyond the classroom.
+            </p>
+            <div
+              class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start"
+            >
+              <a
+                class="btn bg-orange btn-lg px-4 me-sm-3 text-white"
+                href="#"
+                >Shop Now</a
+              >
+              <a class="btn btn-outline-light btn-lg px-4" 
               href="#"
-              >Shop Now</a
-            >
-            <a class="btn btn-outline-light btn-lg px-4" 
-            href="#"
-              >Buy Courses</a
-            >
+                >Buy Courses</a
+              >
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center">
-        <img
-          class="img-fluid rounded-3 my-5"
-          src="{% static 'images/hero-image.jpg' %}"
-          alt="hero image of CI Swag store items"
-        />
+        <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center">
+          <img
+            class="img-fluid rounded-3 my-5"
+            src="{% static 'images/hero-image.jpg' %}"
+            alt="hero image of CI Swag store items"
+          />
+        </div>
       </div>
     </div>
-  </div>
-</header>
+  </header>
 {% endblock %}
 
 {% block content %}
-
-
  <!-- Features section-->
  <section class="py-5 bg-white" id="features">
     <div class="container">
@@ -115,8 +113,6 @@
       </div>
     </div>
   </section>
-
-
   <!-- Delivery section-->
   <div class="py-5 bg-light">
     <div class="container">
@@ -154,8 +150,6 @@
       </div>
     </div>
   </div>
-
-
   <!-- Testimonial section-->
   <section class="py-5 bg-white">
     <div class="container">
@@ -164,172 +158,26 @@
           <h2 class="fw-bolder text-center mb-5">Our Happy Customers</h2>
         </div>
       </div>
+    {% include "includes/carousel.html" %}
 
-      <div
-  id="carouselExampleIndicators"
-  class="carousel slide bg-dark rounded-3"
-  data-bs-ride="carousel"
->
-  <div class="carousel-indicators">
-    <button
-      type="button"
-      data-bs-target="#carouselExampleIndicators"
-      data-bs-slide-to="0"
-      class="active"
-      aria-current="true"
-      aria-label="Slide 1"
-    ></button>
-    <button
-      type="button"
-      data-bs-target="#carouselExampleIndicators"
-      data-bs-slide-to="1"
-      aria-label="Slide 2"
-    ></button>
-    <button
-      type="button"
-      data-bs-target="#carouselExampleIndicators"
-      data-bs-slide-to="2"
-      aria-label="Slide 3"
-    ></button>
-  </div>
-  <div class="carousel-inner">
-    <div
-      class="carousel-item text-center item-center active py-2 text-light pb-5"
-    >
-      <div class="img-box">
-        <img
-          src="{% static 'images/person1.jpg' %}"
-          alt="testimonial person 1"
-        />
-      </div>
-      <h3 class="h4 mt-1">CSS Programming</h3>
-      <div class="star-rating">
-        <ul class="list-inline">
-          <li class="list-inline-item">
-            <i class="fa fa-star text-warning"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fa fa-star text-warning"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fa fa-star text-warning"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fa fa-star text-warning"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fa fa-star-o text-warning"></i>
-          </li>
-        </ul>
-      </div>
-      <p class="testimonial text-center mx-auto">
-        The CSS programming course provided an invaluable foundation for my web development journey. Through clear explanations and hands-on exercises, I gained mastery in styling web pages with precision and creativity. This course not only elevated my skills but also empowered me to create visually stunning and user-friendly websites with confidence.
-      </p>
-      <strong class="overview text-center mx-auto">Gold Berry</strong>
-    </div>
-
-    <div class="carousel-item text-center item-center py-2 text-light pb-5">
-      <div class="img-box">
-        <img
-          src="{% static 'images/person2.jpg' %}"
-          alt="testimonial person 2"
-        />
-      </div>
-      <h3 class="h4 mt-1">Python Programming</h3>
-      <div class="star-rating">
-        <ul class="list-inline">
-          <li class="list-inline-item">
-            <i class="fa fa-star text-warning"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fa fa-star text-warning"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fa fa-star text-warning"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fa fa-star text-warning"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fa fa-star-o text-warning"></i>
-          </li>
-        </ul>
-      </div>
-      <p class="testimonial text-center mx-auto">
-        The Python programming course was a transformative experience that ignited my passion for coding. With engaging lessons and practical projects, I swiftly grasped Python's versatility and efficiency. Thanks to this course, I now have the skills to develop robust software solutions and pursue exciting opportunities in the tech industry.
-      </p>
-      <strong class="overview text-center mx-auto">Darrach Barneveld</strong>
-    </div>
-
-    <div class="carousel-item text-center item-center py-2 text-light pb-5">
-      <div class="img-box">
-        <img
-          src="{% static 'images/person3.jpg' %}"
-          alt="testimonial person 3"
-        />
-      </div>
-      <h3 class="h4 mt-1">Java Programming</h3>
-      <div class="star-rating">
-        <ul class="list-inline">
-          <li class="list-inline-item">
-            <i class="fa fa-star text-warning"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fa fa-star text-warning"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fa fa-star text-warning"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fa fa-star text-warning"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fa fa-star-o text-warning"></i>
-          </li>
-        </ul>
-      </div>
-      <p class="testimonial text-center mx-auto">The Java programming course was instrumental in shaping my understanding of object-oriented programming. With comprehensive tutorials and challenging assignments, I honed my skills in Java development and problem-solving. This course equipped me with the expertise needed to tackle complex projects and thrive in the dynamic world of software engineering.
-      </p>
-      <strong class="overview text-center mx-auto">Tom Bombadil</strong>
-    </div>
-  </div>
-  <button
-    class="carousel-control-prev"
-    type="button"
-    data-bs-target="#carouselExampleIndicators"
-    data-bs-slide="prev"
-  >
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button
-    class="carousel-control-next"
-    type="button"
-    data-bs-target="#carouselExampleIndicators"
-    data-bs-slide="next"
-  >
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
-
-<aside class="bg-orange bg-gradient rounded-3 p-4 p-sm-5 mt-5">
-  <div
-    class="d-flex align-items-center justify-content-between flex-column flex-xl-row text-center text-xl-start"
-  >
-    <div class="mb-4 mb-xl-0">
-      <div class="fs-3 fw-bold text-white">
-        New products and courses every year.
-      </div>
-      <div class="text-white">
-        Sign up to our <a class='fw-bolder text-decoration-underline' href="#">Memberships</a> for exclusive offers.
-      </div>
-    </div>
-      <div class="small text-white">
-        We care about privacy, and will never share your data.
-      </div>
-  </div>
-</aside>
+      <!-- Call to action-->
+      <aside class="bg-orange bg-gradient rounded-3 p-4 p-sm-5 mt-5">
+        <div
+          class="d-flex align-items-center justify-content-between flex-column flex-xl-row text-center text-xl-start"
+        >
+          <div class="mb-4 mb-xl-0">
+            <div class="fs-3 fw-bold text-white">
+              New products and courses every year.
+            </div>
+            <div class="text-white">
+              Sign up to our <a class='fw-bolder text-decoration-underline' href="#">Memberships</a> for exclusive offers.
+            </div>
+          </div>
+            <div class="small text-white">
+              We care about privacy, and will never share your data.
+            </div>
+        </div>
+      </aside>
     </div>
   </section>
 {% endblock %}
