Fix homepage styling margin bug #20

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -10,7 +10,7 @@
 <header class="py-5">
     <!-- Navigation-->
     <div class="container px-5">
-      <div class="row gx-5 align-items-center justify-content-center">
+      <div class="row align-items-center justify-content-center">
         <div class="col-lg-8 col-xl-7 col-xxl-6">
           <div class="my-5 text-center text-xl-start">
             <h1 class="display-5 fw-bolder text-white mb-2">CI SWAG STORE</h1>
@@ -18,7 +18,7 @@
               CI Swag Store, where fashion meets knowledge. Our store not only
               offers stylish branded gear but also provides short
               instructional courses, enriching students with skills and
-              insights beyond the classroom.
+              insights beyond the  classroom.
             </p>
             <div
               class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start"
@@ -51,7 +51,7 @@
  <!-- Features section-->
  <section class="py-5 bg-white" id="features">
     <div class="container">
-      <div class="row gx-5">
+      <div class="row">
         <div class="col-lg-4 mb-5 mb-lg-0">
           <h2 class="fw-bolder mb-0">
             Embark on your learning adventure with a touch of sophistication
@@ -59,7 +59,7 @@
           </h2>
         </div>
         <div class="col-lg-8">
-          <div class="row gx-5 row-cols-1 row-cols-md-2">
+          <div class="row row-cols-1 row-cols-md-2">
             <div class="col mb-5 h-100">
               <div
                 class="feature bg-orange bg-gradient text-white rounded-3 mb-3"
@@ -153,7 +153,7 @@
   <!-- Testimonial section-->
   <section class="py-5 bg-white">
     <div class="container">
-      <div class="row gx-5 justify-content-center">
+      <div class="row justify-content-center">
         <div class="col-lg-8 col-xl-6">
           <h2 class="fw-bolder text-center mb-5">Our Happy Customers</h2>
         </div>
