--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -80,64 +80,67 @@
 
 
         <div class="">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item dropdown">
-              <a class="nav-link text-capitalize" href="#" id="profileDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-
-                {% if request.user.is_authenticated %}
-                {% if request.user.profile.active_subscription %}
-                <span class="fw-bold text-{{request.user.profile.active_subscription.color}}">{{request.user.username}} <i class="fa-solid fa-user fa-lg"></i>
-                </span>
-                {% else %}
-                <span class="fw-bold">{{request.user.username}} <i class="fa-solid fa-user fa-lg"></i>
-                </span>
-                {% endif %}
-             
-                {% else %}
-                <i class="fa-solid fa-user fa-lg"></i>
-                {% endif %}
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="profileDropdown">
-
-                {% if request.user.is_authenticated %}
-                <li><a class="dropdown-item" href="#">Profile</a></li>
-
-                <li>
-                  <a class="dropdown-item" href="#">My Courses</a>
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item dropdown">
+                  <a class="nav-link text-capitalize" href="#" id="profileDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+    
+                    {% if request.user.is_authenticated %}
+                    {% if request.user.profile.active_subscription %}
+                    <span class="fw-bold text-{{request.user.profile.active_subscription.color}}">{{request.user.username}} <i class="fa-solid fa-user fa-lg"></i>
+                    </span>
+                    {% else %}
+                    <span class="fw-bold">{{request.user.username}} <i class="fa-solid fa-user fa-lg"></i>
+                    </span>
+                    {% endif %}
+                 
+                    {% else %}
+                    <i class="fa-solid fa-user fa-lg"></i>
+                    {% endif %}
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="profileDropdown">
+    
+                    {% if request.user.is_authenticated %}
+                    <li><a class="dropdown-item" href="{% url "profile" %}">Profile</a></li>
+    
+                    <li>
+                      <a class="dropdown-item" href="{% url 'my_courses' %}">My Courses</a>
+                    </li>
+    
+                    <li><hr class="dropdown-divider" /></li>
+    
+                    <li>
+                      <a class="dropdown-item" href="{% url 'account_logout' %}">Logout</a>
+                    </li>
+                    
+                    {% else %}
+                    <li><hr class="dropdown-divider" /></li>
+                    <li>
+                      <a class="dropdown-item" href="{% url 'account_signup' %}">Register</a>
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="{% url 'account_login' %}">Login</a>
+                    </li>
+                    {% endif %}
+                  </ul>
                 </li>
-
-                <li><hr class="dropdown-divider" /></li>
-
-                <li>
-                  <a class="dropdown-item" href="#">Logout</a>
+    
+                <li class="nav-item">
+                  <a class="nav-link text-secondary m-0" href="#" aria-expanded="false">
+                    <span class='text-orange fw-bold d-md-none'>Cart</span>
+                    <i class="fas fa-shopping-bag fa-lg position-relative h5">
+                      {% if cart_items|length > 0 %}
+                      <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger" style="font-size: x-small;">
+                        {{ cart_items|length }}
+                      </span>
+                      {% endif %}
+                    </i>
+    
+                    
+                    </span>
+                  </a>
                 </li>
-                
-                {% else %}
-                <li><hr class="dropdown-divider" /></li>
-                <li>
-                  <a class="dropdown-item" href="#">Register</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#">Login</a>
-                </li>
-                {% endif %}
+            
               </ul>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link text-secondary m-0" href="#" aria-expanded="false">
-                <span class='text-orange fw-bold d-md-none'>Cart</span>
-                <i class="fas fa-shopping-bag fa-lg position-relative h5">
-                  {% if cart_items|length > 0 %}
-                  <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger" style="font-size: x-small;">
-                    {{ cart_items|length }}
-                  </span>
-                  {% endif %}
-                </i>
-                </span>
-              </a>
-            </li>
-          </ul>
 
         </div>
       </div>
