--- a/static/css/base.css
+++ b/static/css/base.css
@@ -79,3 +79,25 @@ body {
 .logo img {
   height: 60px;
 }
+
+/* AllAuth Forms */
+
+.login,
+.signup {
+  max-width: 600px;
+}
+
+.btn-color {
+  background-color: #0e1c36;
+  color: #fff;
+}
+
+.profile-image-pic {
+  height: 200px;
+  width: 200px;
+  object-fit: cover;
+}
+
+.cardbody-color {
+  background-color: #ebf2fa;
+}
