--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -20,6 +20,42 @@
 {% block content %}
     <!-- Section-->
     <section class="py-3 bg-white">
+
+        <form method='GET' action='{% url "products" %}' class='mx-auto d-flex justify-content-center search-container'>
+            <div class="search"> <input type="text" class="search-input" placeholder="Search products" name="q" value={% if query %}{{query}}{% endif %}> <button type='submit' class="search-icon btn-primary border-0"> <i class="fa fa-search"></i> </a></div>
+              <button type="submit" class='btn btn-outline-dark align-items-center d-flex' name="sort" value="price">
+                <i class="fa-solid fa-money-bill text-success"></i>
+                {% if sort == 'price' %}
+                    {% if direction == 'asc' %}
+                        <i class="fa-solid fa-sort-down ms-2"></i>
+                        <input type="hidden" name="direction" value="desc">
+                    {% else %}
+                        <i class="fa-solid fa-sort-up ms-2"></i>
+                        <input type="hidden" name="direction" value="asc">
+                    {% endif %}
+                {% endif %}
+            </button>
+      
+            <button type="submit" class='btn btn-outline-dark align-items-center d-flex' name="sort" value="rating">
+              <i class="fa-solid fa-star text-warning"></i>
+              {% if sort == 'rating' %}
+                  {% if direction == 'asc' %}
+                      <i class="fa-solid fa-sort-down ms-2"></i>
+                      <input type="hidden" name="direction" value="desc">
+                  {% else %}
+                      <i class="fa-solid fa-sort-up ms-2"></i>
+                      <input type="hidden" name="direction" value="asc">
+                  {% endif %}
+              {% else %}
+              {% endif %}
+            </button>
+    
+            <button type="submit" class='btn btn-outline-dark align-items-center d-flex' name="sort" value="sale">
+              <i class="fa-solid fa-tags text-danger"></i>
+            </button>
+        </form>
+
+        
         <div class="container px-lg-5 mt-5">
           <div
             class="row row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center"
