--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -100,16 +100,16 @@
                   <ul class="dropdown-menu" aria-labelledby="profileDropdown">
     
                     {% if request.user.is_authenticated %}
-                    <li><a class="dropdown-item" href="{% url "profile" %}">Profile</a></li>
+                    <li><a class="dropdown-item" href="#">Profile</a></li>
     
                     <li>
-                      <a class="dropdown-item" href="{% url 'my_courses' %}">My Courses</a>
+                      <a class="dropdown-item" href="#">My Courses</a>
                     </li>
     
                     <li><hr class="dropdown-divider" /></li>
     
                     <li>
-                      <a class="dropdown-item" href="{% url 'account_logout' %}">Logout</a>
+                      <a class="dropdown-item" href="#">Logout</a>
                     </li>
                     
                     {% else %}
