Link product card to product detail page #24

--- a/products/templates/includes/product_card.html
+++ b/products/templates/includes/product_card.html
@@ -43,9 +43,9 @@
       </div>
       <!-- Product actions-->
       <div class="p-1 pb-2 p-lg-4 pt-0 text-center">
-          <a class="btn btn-outline-dark mt-auto" href="#"
-            >View Product</a
-          >
+          <a class="btn btn-outline-dark mt-auto" href="{% url "product_detail" product.id %}"
+          >View Product</a
+        >
       </div>
     </div>
 </div>
