--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -12,7 +12,7 @@
       <div class="text-center text-white">
         <h1 class="display-4 fw-bolder">Shop in style</h1>
         <p class="lead fw-normal text-white-50 mb-0">
-          Choose from our extensive Products
+          Choose from our extensive {% if current_categories %}<em class='text-info'> {{current_categories.friendly_name}}</em>{% endif %} products!
         </p>
       </div> 
     </div>
