--- a/static/css/base.css
+++ b/static/css/base.css
@@ -25,7 +25,7 @@ body {
   min-height: 100vh;
 }
 
-/* Theming for similar custom bootstrap styles */
+/* CUSTOM BOOTSTRAP INLINE THEMES */
 
 .bg-orange {
   background: var(--primary-orange);
@@ -60,6 +60,7 @@ body {
 }
 
 /* NAVIGATION BAR */
+
 .nav-container {
   padding-top: 0.25rem;
   padding-bottom: 1rem;
@@ -80,7 +81,7 @@ body {
   height: 60px;
 }
 
-/* AllAuth Forms */
+/* ALLAUTH FORMS */
 
 .login,
 .signup {
@@ -100,4 +101,65 @@ body {
 
 .cardbody-color {
   background-color: #ebf2fa;
+}
+
+/* SEARCHBAR */
+
+.search-container {
+  max-width: 600px;
+  gap: 0.25rem;
+}
+
+.search-container button {
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  flex: 1;
+}
+
+.search {
+  width: 100%;
+  margin-bottom: auto;
+  height: 50px;
+  background-color: #fff;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.search-input {
+  color: white;
+  border: 0;
+  outline: 0;
+  background: none;
+  width: 0;
+  margin-top: 5px;
+  caret-color: transparent;
+  line-height: 20px;
+  transition: width 0.4s linear;
+  min-width: 250px;
+}
+
+.search .search-input {
+  padding: 0 10px;
+  width: 100%;
+  caret-color: #536bf6;
+  font-size: 19px;
+  font-weight: 300;
+  color: black;
+  transition: width 0.4s linear;
+}
+
+.search-icon {
+  height: 34px;
+  width: 34px;
+  float: right;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  bottom: 30px;
+  position: relative;
+  border-radius: 5px;
+}
+
+.search-icon:hover {
+  color: #fff !important;
 }
