--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -8,14 +8,31 @@
 
 {% block page_header %}
 <header class="bg-dark">
-    <div class="container px-4 px-lg-5 mt-5 mb-2">
-      <div class="text-center text-white">
-        <h1 class="display-4 fw-bolder">Shop in style</h1>
-        <p class="lead fw-normal text-white-50 mb-0">
-          Choose from our extensive {% if current_categories %}<em class='text-info'> {{current_categories.friendly_name}}</em>{% endif %} products!
-        </p>
-      </div> 
+  <div class="container px-4 px-lg-5 mt-5 mb-2">
+    <div class="text-center text-white">
+      <h1 class="display-4 fw-bolder">Shop in style</h1>
+      <p class="lead fw-normal text-white-50 mb-0">
+
+        
+        Choose from our extensive {% if current_categories %}<em class='text-info'> {{current_categories.friendly_name}}</em>{% endif %} products!
+      </p>
     </div>
+
+    <ul class="list-inline widget-list-inline text-center my-3">
+      <li class="list-inline-item m-1">
+        <a href="{% url 'products' %}">All</a>
+      </li>
+      <li class="list-inline-item m-1">
+        <a href="{% url 'products' %}?category=clothing">Clothing</a>
+      </li>
+      <li class="list-inline-item m-1">
+        <a href="{% url 'products' %}?category=stationary">Stationary</a>
+      </li>
+      <li class="list-inline-item m-1">
+        <a class="" href="{% url 'products' %}?category=miscellaneous">Miscellaneous</a>
+      </li>
+  </ul>
+  </div>
 </header>  
 
 {% endblock %}
