--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -1,30 +1,57 @@
-{% extends "base.html" %}
-{% load static %}
+{% extends "base.html" %} 
+{% load static %} 
 
 {% block page_header %}
 <header class="bg-dark">
-    <div class="container px-4 px-lg-5 my-5">
-      <div class="text-center text-white">
-        <h1 class="display-4 fw-bolder">Shop in style</h1>
-        <p class="lead fw-normal text-white-50 mb-0">
-         Fancy this product? Add it to your cart!
-        </p>
-      </div>
+  <div class="container px-4 px-lg-5 my-5">
+    <div class="text-center text-white">
+      <h1 class="display-4 fw-bolder">Shop in style</h1>
+      <p class="lead fw-normal text-white-50 mb-0">
+        Fancy this product? Add it to your cart!
+      </p>
     </div>
-</header>  
+  </div>
+</header>
 
-{% endblock %}
+{% endblock %} 
+
 
 {% block content %}
 
 <section>
-
-    <p>{{product.name}}</p>
-
+  <section class="py-5 bg-white">
+    <div class="container px-4 px-lg-5 my-5">
+      <div class="row gx-4 gx-lg-5 align-items-center">
+        <div class="col-md-6 position-relative">
+          <img
+            class="card-img-top mb-5 mb-md-0"
+            src="{{ product.image.url }}"
+            alt="..."
+          />
+          {% if product.sale %}
+          <div class="position-absolute " style="top: 0.5rem; right: 0.5rem">
+            <p class='h5'><span class="badge bg-success">{{product.sale}}% Sale
+            </span><p>
+          </div>
+          {% endif %}
+        </div>
+        <div class="col-md-6">
+          <div class="small mb-1">SKU: {{product.sku}}</div>
+          <h1 class="display-5 fw-bolder">{{product.name}}</h1>
+          <div class="fs-5 mb-5">
+            {% if product.sale %}
+            <span class="text-decoration-line-through text-danger">${{product.price}}</span>
+            <span>${{product.total_final_price}}</span>
+            {% else %}
+            <span>${{product.price}}</span>
+            {% endif %}
+          </div>
+          <p class="lead">{{product.description}}</p>
+          
+        </div>
+      </div>
+    </div>
+  </section>
 </section>
 
-
-
-
 {% endblock %}
-
