--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -47,6 +47,32 @@
             {% endif %}
           </div>
           <p class="lead">{{product.description}}</p>
+
+         <!-- Add to cart form -->
+            <form class="form" action="#" method="POST">
+                {% csrf_token %}
+                <div class="d-flex">
+                <input
+                    name="quantity"
+                    class="form-control text-center me-3"
+                    id="inputQuantity"
+                    type="number"
+                    value="1"
+                    min="1"
+                    max="99"
+                    style="max-width: 9rem"
+                />
+                <button
+                    id="submitBtn"
+                    class="btn btn-outline-dark flex-shrink-0"
+                    type="submit"
+                >
+                    <i class="bi-cart-fill me-1"></i>
+                    Add to cart
+                </button>
+                <input type="hidden" name="redirect_url" value="{{ request.path }}" />
+                </div>
+            </form>
           
         </div>
       </div>
