--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -18,7 +18,6 @@
 
 {% block content %}
 
-<section>
   <section class="py-5 bg-white">
     <div class="container px-4 px-lg-5 my-5">
       <div class="row gx-4 gx-lg-5 align-items-center">
@@ -73,11 +72,17 @@
                 <input type="hidden" name="redirect_url" value="{{ request.path }}" />
                 </div>
             </form>
-          
         </div>
+      </div>
+
+      <div class="mt-3">
+        <a href="{% url "products" %}">
+          <i class="fas fa-arrow-left mr-2"></i> Back to products</a
+        >
       </div>
     </div>
   </section>
-</section>
+
+ 
 
 {% endblock %}
