--- a/programs/templates/programs/program_detail.html
+++ b/programs/templates/programs/program_detail.html
@@ -33,6 +33,11 @@
         </div>
       </div>
     </div>
+    <div class="mt-3">
+        <a href="{% url "programs" %}">
+          <i class="fas fa-arrow-left mr-2"></i> Back to programs</a
+        >
+      </div>
   </div>
 </section>
 
