--- a/programs/templates/programs/program_detail.html
+++ b/programs/templates/programs/program_detail.html
@@ -17,29 +17,128 @@
 
 {% block content %}
 
-<section class="py-5 bg-white">
-  <div class="container px-4 px-lg-5 my-5">
-    <div class="row gx-4 gx-lg-5 align-items-center">
-      <div class="col-md-6">
-        <div class="small mb-1">SKU: {{program.sku}}</div>
-        <h1 class="display-5 fw-bolder">{{program.name}}</h1>
-        <div class="fs-5 mb-3">
-          {% if program.sale %}
-          <span class="text-decoration-line-through text-danger">${{program.price}}</span>
-          <span>${{program.total_final_price}}</span>
-          {% else %}
-          <span>${{program.price}}</span>
-          {% endif %}
+<section class="py-2 py-lg-5 bg-white">
+    <div class="container px-4 px-lg-5 my-5">
+      <div class="row gx-4 gx-lg-5 align-items-center">
+        <div class="col-md-6">
+          <div class="small mb-1">SKU: {{program.sku}}</div>
+          <h1 class="display-5 fw-bolder">{{program.name}}</h1>
+          <div class="fs-5 mb-3">
+            {% if program.sale %}
+            <span class="text-decoration-line-through">${{program.price}}</span>
+            <span>${{program.total_final_price}}</span>
+            {% else %}
+            <span>${{program.price}}</span>
+            {% endif %}
+          </div>
+  
+          <div class="row mb-3">
+            <div class="item col-4">
+              <div class="mb-1 d-flex align-items-center fw-bold">
+                <i class="fa-solid fa-star text-warning"></i>
+                Rating
+              </div>
+              <span>{{program.rating}}</span>
+            </div>
+            <div class="item col-4">
+              <div class="mb-1 d-flex align-items-center fw-bold">
+                <i class="fa-solid fa-clock text-primary"></i>
+                Duration
+              </div>
+              <span>{{program.length}}</span>
+            </div>
+            <div class="item col-4">
+              <div class="mb-1 d-flex align-items-center fw-bold">
+                {% if program.difficulty == 1 %}
+                <i class="fa-solid fa-gauge-high text-success"></i>
+                Difficulty
+              </div>
+              <span>Beginner</span>
+              {% elif program.difficulty == 2 %}
+              <i class="fa-solid fa-gauge-high text-warning"></i>
+              Difficulty
+              <span>Intermediate</span>
+              {% else %}
+              <i class="fa-solid fa-gauge-high text-danger"></i>
+              Difficulty
+              <span>Advanced</span>
+              {% endif %}
+            </div>
+          </div>
+        <hr>
+          <p class="lead">{{program.description}}</p>
+
+          <form
+            class="form"
+            action="#"
+            method="POST"
+          >
+            {% csrf_token %}
+            <div class="d-flex mb-3">
+              <button type="submit" class="btn btn-primary flex-shrink-0">
+                <i class="fa-solid fa-school"></i> Add to Cart
+              </button>
+              <input type="hidden" name="item_type" value="program" />
+              <input
+                type="hidden"
+                name="redirect_url"
+                value="{{ request.path }}"
+              />
+            </div>
+          </form>
+
+          <hr>
+
         </div>
+
+        <div class="col-md-6">
+            <h2 class="text-center">What you will learn</h2>
+    
+            <p class='text-center fw-bolder text-decoration-underline text-primary'>Modules {{ program.modules.all|length }}</p>
+            <div class="accordion" id="accordionPanelsStayOpenExample">
+              {{program.module.all}} {% for module in program.modules.all %}
+    
+              <div class="accordion-item">
+                <h2
+                  class="accordion-header"
+                  id="panelsStayOpen-heading{{ module.pk }}"
+                >
+                  <button
+                    class="accordion-button{% if not forloop.first %} collapsed {% endif %}"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#panelsStayOpen-collapse{{ module.pk }}"
+                    aria-expanded="{% if forloop.first %}true{% else %}false{% endif %}"
+                    aria-controls="panelsStayOpen-collapse{{ module.pk }}"
+                  >
+                  <strong>
+                    {{ module.title }}
+                    </strong
+                  </button>
+                </h2>
+                <div
+                  id="panelsStayOpen-collapse{{ module.pk }}"
+                  class="accordion-collapse collapse{% if forloop.first %} show{% endif %}"
+                  aria-labelledby="panelsStayOpen-heading{{ module.pk }}"
+                >
+                  <div class="accordion-body fw-light">
+                    {{ module.description }}
+                  </div>
+                </div>
+              </div>
+              {% endfor %}
+            </div>
+          </div>
       </div>
     </div>
-    <div class="mt-3">
-        <a href="{% url "programs" %}">
-          <i class="fas fa-arrow-left mr-2"></i> Back to programs</a
-        >
-      </div>
-  </div>
-</section>
+  </section>
 
 {% endblock %}
 
+
+
+<div class="mt-3">
+    <a href="{% url "programs" %}">
+      <i class="fas fa-arrow-left mr-2"></i> Back to programs</a
+    >
+  </div>
