--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -1,6 +1,13 @@
 {% extends "base.html" %}
 {% load static %}
 
+
+{% block extra_css %}
+    <link rel="stylesheet" href="{% static 'cart/css/cart.css' %}">
+{% endblock %}
+
+
+
 {% block page_header %}
 <header class="bg-dark">
     <div class="container px-4 px-lg-5 my-5">
