--- a/templates/base.html
+++ b/templates/base.html
@@ -46,6 +46,29 @@
     <!-- Navigation-->
     {% include 'includes/navbar.html' %}
 
+
+     <!-- Crud notification messages-->
+    {% if messages %}
+    <div class="message-container">
+        {% for message in messages %}
+        <div class="toast custom-toast rounded-0 border-top-0" data-autohide="false">
+            <div class="arrow-up arrow-danger"></div>
+            <div class="w-100 toast-capper bg-success"></div>
+            <div class="toast-header d-flex justify-content-between bg-white text-dark">
+              <strong class="mr-auto">Success!</strong>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="toast"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="toast-body bg-white">{{ message }}</div>
+          </div>          
+        {% endfor %}
+    </div>
+    {% endif %}
+
             
 
 
