--- a/templates/base.html
+++ b/templates/base.html
@@ -107,7 +107,12 @@
 
 
     {% block postloadjs %}
+    <script type="text/javascript">
+      $(document).ready(function() {
+        $('.toast').toast('show');
+    });    </script>
     {% endblock %}
+  
   
   </body>
 </html>
