Link subscription page to navbar #7

--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -70,7 +70,7 @@
           </li>
        
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="{% url "subscriptions" %}">
               <span class="text-orange fw-bold">Subscriptions <i class="fa-solid fa-certificate text-orange"></i>
               </span>
             </a>
