--- a/profiles/templates/profiles/subscriptions.html
+++ b/profiles/templates/profiles/subscriptions.html
@@ -1,8 +1,11 @@
 {% extends "base.html" %}
-<!--  -->
 {% load static %}
 
-<!--  -->
+{% block extra_css %}
+    <link rel="stylesheet" href="{% static 'profiles/css/profiles.css' %}">
+{% endblock %}
+
+
 {% block page_header %}
 <header class="bg-dark">
   <div class="container px-4 px-lg-5 my-5">
