--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -2,6 +2,10 @@
 {% load static %}
 {% load cart_tools %}
 
+{% block extra_css %}
+<link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}">
+{% endblock %}
+
 
 
 {% block page_header %}
@@ -108,7 +112,7 @@
                       <div>
                         <h5 class="font-size-16 mb-1">Payment Info</h5>
                         <p class="text-muted text-truncate mb-4">
-                          Enter your payment details
+                          Enter your payment information
                         </p>
                       </div>
                     </div>
