Implement post request functionality on Order view #36

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -127,7 +127,7 @@
                   </div>
                   <div class="col">
                     <div class="text-end mt-2 mt-sm-0">
-                      <button type='submit' href="#" class="btn btn-success">
+                      <button type='submit' class="btn btn-success">
                          Pay Now
                       </button>
                     </div>
