Render UI messages on removal of subscription #32

--- a/profiles/templates/includes/confirm_modal.html
+++ b/profiles/templates/includes/confirm_modal.html
@@ -24,7 +24,7 @@
        </button>
 
 
-       <form method="POST" action=""
+       <form method="POST" action="{% url 'remove_subscription' %}"
        >
          {% csrf_token %}
          <input type="hidden"       
