--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -109,7 +109,7 @@
                     <li><hr class="dropdown-divider" /></li>
     
                     <li>
-                      <a class="dropdown-item" href="#">Logout</a>
+                      <a class="dropdown-item" href="{% url 'account_logout' %}">Logout</a>
                     </li>
                     
                     {% else %}
