--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -111,8 +111,8 @@
             <tr>
               <td>
                 <a
-                  href="#"
-                  title="{{ order.order_number }}"
+                href="{% url 'order_history' order.order_number %}"
+                title="{{ order.order_number }}"
                 >
                   {{ order.order_number|truncatechars:6 }}
                 </a>
