Add my courses link to navbar #45

--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -103,7 +103,7 @@
                     <li><a class="dropdown-item" href="{% url "profile" %}">Profile</a></li>
     
                     <li>
-                      <a class="dropdown-item" href="#">My Courses</a>
+                      <a class="dropdown-item" href="{% url 'my_courses' %}">My Courses</a>
                     </li>
     
                     <li><hr class="dropdown-divider" /></li>
