Order confirmation emails sent post successful order #47

--- a/products/templates/includes/product_card.html
+++ b/products/templates/includes/product_card.html
@@ -29,7 +29,7 @@
 
           <p>
           {% if product.sale %}
-          <span class="text-decoration-line-through">${{product.price}}</span>
+          <span class="text-decoration-line-through text-danger">${{product.price}}</span>
           <strong>${{product.total_final_price}}</strong>
           {% else %}
           <strong>${{product.price}}</strong>
