Add loading spinner to checkout page #48

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -210,6 +210,14 @@
         </div>
       </div>
   </section>
+
+  <div id="loading-overlay">
+    <div class="text-light logo-font loading-spinner">
+        <span class="icon">
+            <i class="fa-solid fa-spinner fa-spin-pulse fa-xl"></i>
+        </span>
+    </div>
+</div>
 {% endblock %}
 
 
