--- a/static/css/base.css
+++ b/static/css/base.css
@@ -267,13 +267,13 @@ a:link {
 /* LOADING SPINNER */
 
 #loading-overlay {
-  display: none;
+  /* display: none; */
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: var(--orange);
+  background: rgba(255, 69, 30, 0.5);
   z-index: 9999;
 }
 
@@ -284,6 +284,7 @@ a:link {
   margin: 0;
   height: 100%;
 }
+
 .loading-spinner .icon i {
   font-size: 5rem;
 }
