Show membership level on profile page #49

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -25,11 +25,11 @@
             >
               <a
                 class="btn bg-orange btn-lg px-4 me-sm-3 text-white"
-                href="#"
+                href="{% url 'products' %}"
                 >Shop Now</a
               >
               <a class="btn btn-outline-light btn-lg px-4" 
-              href="#"
+              href="{% url 'programs' %}"
                 >Buy Courses</a
               >
             </div>
