--- a/static/css/base.css
+++ b/static/css/base.css
@@ -267,7 +267,7 @@ a:link {
 /* LOADING SPINNER */
 
 #loading-overlay {
-  /* display: none; */
+  display: none;
   position: fixed;
   top: 0;
   left: 0;
