--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -4,7 +4,7 @@
 <div class="nav-container m-0">
   <nav class="container sticky-top sticky-nav navbar navbar-expand-lg navbar-light bg-light p-0 ">
     <div class="container-fluid">
-      <a class="navbar-brand fw-bolder logo" href="#">
+      <a class="navbar-brand fw-bolder logo" href="{% url 'home' %}">
         <img src="{% static 'images/logo.png' %}" alt="code institute swag logo" class="" />
       </a>
       <button
