Include related products into program detail template #51

--- a/programs/templates/programs/program_detail.html
+++ b/programs/templates/programs/program_detail.html
@@ -185,6 +185,11 @@
     {% endif %}
 
 
+   <!-- Related Item Section -->
+    {% include "includes/related_items.html" with related_items=related_products %}
+
+
+
 {% endblock %}
 
 
